jaeger-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-service
  name: jaeger-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaeger-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ms-opentelemetry-spring-default: "true"
        io.kompose.service: jaeger-service
    spec:
      containers:
        - image: jaegertracing/all-in-one:latest
          name: jaeger-service
          ports:
            - containerPort: 16686
            - containerPort: 14250
          resources: {}
      restartPolicy: Always
status: {}
