otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: otel-collector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ms-opentelemetry-spring-default: "true"
        io.kompose.service: otel-collector
    spec:
      containers:
        - args:
            - --config=/etc/otel-collector-config.yml
          image: otel/opentelemetry-collector:0.72.0
          name: otel-collector
          ports:
            - containerPort: 1888
            - containerPort: 8888
            - containerPort: 8889
            - containerPort: 13133
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 55679
          resources: {}
          volumeMounts:
            - mountPath: /etc/otel-collector-config.yml
              name: otel-collector-claim0
      restartPolicy: Always
      volumes:
        - name: otel-collector-claim0
          persistentVolumeClaim:
            claimName: otel-collector-claim0
status: {}
