student-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: student-service
  name: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: student-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ms-opentelemetry-spring-spring-cloud-network: "true"
        io.kompose.service: student-service
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
              value: http://eureka-server:8761/eureka
            - name: SPRING_CLOUD_GATEWAY_URI
              value: http://api-gateway:9090
          image: student-service:latest
          name: student-service
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
