jaeger-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-service
  name: jaeger-service
spec:
  ports:
    - name: "16686"
      port: 16686
      targetPort: 16686
    - name: "14250"
      port: 14250
      targetPort: 14250
  selector:
    io.kompose.service: jaeger-service
status:
  loadBalancer: {}
