otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "1888"
      port: 1888
      targetPort: 1888
    - name: "8888"
      port: 8888
      targetPort: 8888
    - name: "8889"
      port: 8889
      targetPort: 8889
    - name: "13133"
      port: 13133
      targetPort: 13133
    - name: "4317"
      port: 4317
      targetPort: 4317
    - name: "4318"
      port: 4318
      targetPort: 4318
    - name: "55679"
      port: 55679
      targetPort: 55679
  selector:
    io.kompose.service: otel-collector
status:
  loadBalancer: {}
