ms-opentelemetry-spring-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ms-opentelemetry-spring-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ms-opentelemetry-spring-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ms-opentelemetry-spring-default: "true"
